fix: rename classes and organize style

--- a/Timeline/index.html
+++ b/Timeline/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="./css/style.css" />
-<main class="container">
+<main class="timeline-container">
   <section class="text-left">
     <h2>Entenda como fazer sua compra com a Vivo</h2>
   </section>
